# sandbox

./: .gitignore  Cargo.toml  Dockerfile.test
.github/workflows/: ci.yml
benches/: startup.rs
crates/sandbox-client/: Cargo.toml
crates/sandbox-client/src/: lib.rs  scm_rights.rs
crates/sandbox-proto/: Cargo.toml
crates/sandbox-proto/src/: lib.rs
src/: error.rs  lib.rs  main.rs  protocol.rs
src/cgroup/: cpu.rs  memory.rs  mod.rs  pids.rs
src/client/: mod.rs
src/container/: builder.rs  init.rs  mod.rs  state.rs
src/daemon/: manager.rs  mod.rs  persist.rs
src/namespace/: ipc.rs  mod.rs  mount.rs  network.rs  pid.rs  subid.rs  user.rs  uts.rs
src/net/: bridge.rs  mod.rs  netlink.rs  veth.rs
src/rootfs/: mod.rs  pivot.rs
src/security/: capabilities.rs  seccomp.rs
src/storage/: container_fs.rs  fs_detect.rs  image.rs  layers.rs  mod.rs  oci.rs  unpack.rs
src/sys/: clone3.rs  eventfd.rs  hot_mount.rs  idmap.rs  mod.rs  mount_api.rs  pty.rs  scm_rights.rs
tests/: daemon.rs  lifecycle.rs  protocol.rs
tests/common/: mod.rs  rootfs.rs
