[package]
name = "sandbox"
version = "0.1.0"
edition = "2024"
description = "A minimal Linux container manager using kernel namespaces"
license = "MIT"
rust-version = "1.85"

[lib]
name = "sandbox"
path = "src/lib.rs"

[[bin]]
name = "sandbox"
path = "src/main.rs"

[dependencies]
# Syscall wrappers
nix = { version = "0.31", features = ["sched", "mount", "signal", "hostname", "user", "process", "fs", "net", "ioctl", "event", "term", "ptrace"] }
libc = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Security
seccompiler = "0.5"

# Async runtime (daemon)
smol = "2"
async-io = "2"

# Serialization / wire protocol
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Signal handling (graceful daemon shutdown)
signal-hook = "0.4"
signal-hook-async-std = "0.4"

# OCI registry pull
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
zstd = "0.13"
tar = "0.4"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "startup"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
