[package]
name = "sandbox-proto"
version = "0.1.0"
edition = "2024"
description = "Wire protocol types for the sandbox container manager"
license = "MIT"
rust-version = "1.85"

[dependencies]
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
thiserror = "2"
